Add ui based on Ania Kubow's freeCodeCamp tutorial. Left old js code for reference

--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
-    
-    <title>Rock Paper Scissors</title>
-</head>
-<body>
-    <script src="./script.js">
-    </script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title></title>
+  </head>
+  <body>
+    <h2>Game: <span id="game-counter"></span></h2>
+    <h2>Computer: <span id="computer-choice"></span></h2>
+    <h2>You: <span id="user-choice"></span> </h2>
+    <h2>Computer Score: <span id="computer-score"></span></h2>
+    <h2>Your score: <span id="user-score"></span></h2>
+    <h2>Result: <span id="result"></span></h2>
+
+    <button class="play-btn" id="rock">rock</button>
+    <button class="play-btn" id="paper">paper</button>
+    <button class="play-btn" id="scissors">scissors</button>
+    <button id="reset-btn">reset</button>
+
+    <script src="script.js"></script>
+  </body>
 </html>
